<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mrpt_msgs</name>
  <version>0.4.3</version>
  <description>ROS messages for MRPT classes and objects</description>

  <maintainer email="jlblanco@ual.es">Jose-Luis Blanco-Claraco</maintainer>
  <maintainer email="markus.bader@tuwien.ac.at">Markus Bader</maintainer>

  <license>BSD</license>
  <url>https://wiki.ros.org/mrpt_msgs</url>

  <!-- COMMON DEPS -->
  <build_depend>ros_environment</build_depend>

  <!-- BUILD TOOLS -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>
  
  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
  <exec_depend  condition="$ROS_VERSION == 1">message_runtime</exec_depend>
  
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <build_depend    condition="$ROS_VERSION == 2">rosidl_default_generators</build_depend>
  <exec_depend     condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>

  <test_depend     condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
  <test_depend     condition="$ROS_VERSION == 2">ament_lint_cmake</test_depend>
  <test_depend     condition="$ROS_VERSION == 2">ament_lint_common</test_depend>
  <test_depend     condition="$ROS_VERSION == 2">ament_cppcheck</test_depend>
  <test_depend     condition="$ROS_VERSION == 2">ament_cpplint</test_depend>

  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

</package>
